[REFACOTR] #84 유저 도메인 수정
