# src/controller/user.controller.ts
@@ -11,6 +11,7 @@ const userService = new UserService();
 const matchingService = new MatchingService();
 const roomService = new RoomService();
 
+// 회원가입
 export const signupController = async (
   req: Request,
   res: Response,
@@ -20,13 +21,13 @@ export const signupController = async (
     // DTO
     const signupData = toSignupDTO(req.body);
 
-    // 회원가입 서비스 호출
+    // 회원가입
     const createdUser = await userService.createUser(signupData);
 
-    // 매칭 서비스 호출 (개인 매칭)
+    // 개인 매칭 생성
     await matchingService.createPersonalMatching(createdUser.studentId);
 
-    // 매칭 서비스 호출 (그룹 매칭 생성)
+    // 그룹 매칭 생성
     const groupInfo = await matchingService.createGroupMatching(
       createdUser.studentId
     );
@@ -36,7 +37,30 @@ export const signupController = async (
       createdUser.studentId
     );
 
-    // 없다면 채팅방 만들 필요 X
+    /* 
+     matchParticipants ==
+          {
+            matchId: 2,
+            matchType: 'GROUP',
+            personalNum: null,
+            groupNum: 1,
+            matchParticipants: [
+              { userId: 1, matchId: 2, user: [Object] },
+              { userId: 2, matchId: 2, user: [Object] },
+              { userId: 3, matchId: 2, user: [Object] }
+            ]
+           }
+    */
+    /*
+    matchParticipants?.matchParticipants ==
+        {
+        userId: 1,
+        matchId: 2,
+        user: { userId: 1, name: '테스트', studentId: '2023216001' }
+      }, 
+     */
+
+    // 그룹 매칭에 아무도 없다면 채팅방 만들 필요 X
     if (matchParticipants) {
       // 개인 채팅방 생성
       await roomService.createIndividualRooms(
@@ -59,6 +83,7 @@ export const signupController = async (
   }
 };
 
+// 로그인
 export const loginController = async (
   req: Request,
   res: Response,
@@ -82,20 +107,21 @@ export const loginController = async (
       studentId: loginUser.studentId,
     });
 
+    // 쿠키 설정
     res.cookie("accessToken", accessToken, {
-      httpOnly: true,
-      sameSite: "none",
-      maxAge: 3 * 60 * 60 * 1000,
-      path: "/",
-      secure: true,
+      httpOnly: true, // 브라우저에서 js 접근 불가능
+      sameSite: "none", // 크로스 사이트 요청 가능 , secure: true 필수
+      maxAge: 3 * 60 * 60 * 1000, // 3시간
+      path: "/", //도메인 내 모든 경로에서 사용 가능.
+      secure: true, // HTTPS 연결에서만 쿠키가 전송
     });
 
     res.cookie("refreshToken", refreshToken, {
-      httpOnly: true,
-      sameSite: "none",
-      maxAge: 2 * 24 * 60 * 60 * 1000,
-      path: "/",
-      secure: true,
+      httpOnly: true, // 브라우저에서 js 접근 불가능
+      sameSite: "none", // 크로스 사이트 요청 가능 , secure: true 필수
+      maxAge: 7 * 24 * 60 * 60 * 1000, // 7일
+      path: "/", // 도메인 내 모든 경로에서 사용 가능.
+      secure: true, // HTTPS 연결에서만 쿠키가 전송
     });
 
     res.status(StatusCodes.OK).success(loginUser);
@@ -105,6 +131,7 @@ export const loginController = async (
   }
 };
 
+// 유저 상세 정보 조회
 export const getUserInfoController = async (
   req: Request,
   res: Response,
@@ -128,6 +155,8 @@ export const getUserInfoController = async (
     next(error);
   }
 };
+
+// 유저 정보 수정
 export const updateUserInfoController = async (
   req: Request,
   res: Response,
@@ -142,6 +171,8 @@ export const updateUserInfoController = async (
         "입력 값: " + req.headers.authorization
       );
     }
+
+    // DTO
     const updateData = toUpdateUserDTO({ userId, ...req.body });
 
     const updatedUser = await userService.updateUserInfo(updateData);
@@ -153,13 +184,13 @@ export const updateUserInfoController = async (
   }
 };
 
+// pin 번호 수정
 export const updatePinController = async (
   req: Request,
   res: Response,
   next: NextFunction
 ) => {
-  const email = req.body.email;
-  const pin = req.body.pin;
+  const { email, pin } = req.body;
 
   try {
     if (!email || !pin) {
@@ -174,6 +205,8 @@ export const updatePinController = async (
     next(error);
   }
 };
+
+// 회원 탈퇴
 export const deleteUserController = async (
   req: Request,
   res: Response,
@@ -191,16 +224,19 @@ export const deleteUserController = async (
 
     const deletedUser = await userService.deleteUser(userId);
 
+    // 쿠키 삭제
     res.clearCookie("accessToken", {
       httpOnly: true,
       sameSite: "none",
       secure: true,
+      path: "/",
     });
 
     res.clearCookie("refreshToken", {
       httpOnly: true,
       sameSite: "none",
       secure: true,
+      path: "/",
     });
 
     res.status(StatusCodes.OK).success(deletedUser);
@@ -209,6 +245,8 @@ export const deleteUserController = async (
     next(error);
   }
 };
+
+// 로그아웃
 export const logoutController = async (
   req: Request,
   res: Response,
@@ -224,17 +262,21 @@ export const logoutController = async (
       );
     }
 
+    // 쿠키 삭제
     res.clearCookie("accessToken", {
       httpOnly: true,
       sameSite: "none",
       secure: true,
+      path: "/",
     });
 
     res.clearCookie("refreshToken", {
       httpOnly: true,
       sameSite: "none",
       secure: true,
+      path: "/",
     });
+
     res.status(StatusCodes.OK).success("로그아웃 되었습니다");
   } catch (error) {
     console.error(error);
